--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
+@import-normalize; 
 
-@import-normalize; /* bring in normalize.css styles */
+/* bring in normalize.css styles */
 
 :root {
   --color-white: #ffffff;
